--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,11 @@
         <nav>
             <ul>
                 <li><a href="#">गृहपृष्ठ</a></li>
-                <li><a href="#">निर्वाचन</a></li>
-                <li><a href="#">समाचार</a></li>
-                <li><a href="#">सम्पर्क</a></li>
+                <li><a href="#candidates">उम्मेदवार</a></li>
+                <li><a href="#voting">मतदान</a></li>
+                <li><a href="#results">नतिजा</a></li>
+                <li><a href="#news">समाचार</a></li>
+                <li><a href="#contact">सम्पर्क</a></li>
             </ul>
         </nav>
     </header>
@@ -28,22 +30,38 @@
         <section class="hero">
             <h1>नेपाल निर्वाचन आयोग</h1>
             <p>स्वतन्त्र, निष्पक्ष र पारदर्शी निर्वाचनको ग्यारेन्टी</p>
+            <div class="cta-buttons">
+                <button onclick="location.href='#register'">मतदाता दर्ता</button>
+                <button onclick="location.href='#voting'">मतदान कसरी गर्ने?</button>
+            </div>
         </section>
 
-        <!-- Election Information -->
-        <section class="election-info">
-            <h2>निर्वाचन जानकारी</h2>
-            <div id="electionData"></div>
+        <!-- Candidate Profiles -->
+        <section id="candidates" class="candidates">
+            <h2>उम्मेदवारहरू</h2>
+            <div id="candidateData"></div>
+        </section>
+
+        <!-- Voting Information -->
+        <section id="voting" class="voting-info">
+            <h2>मतदान जानकारी</h2>
+            <div id="votingData"></div>
+        </section>
+
+        <!-- Live Election Results -->
+        <section id="results" class="results">
+            <h2>नतिजा</h2>
+            <div id="resultsData"></div>
         </section>
 
         <!-- News Section -->
-        <section class="news">
+        <section id="news" class="news">
             <h2>ताजा समाचार</h2>
             <div id="newsData"></div>
         </section>
 
         <!-- Contact Section -->
-        <section class="contact">
+        <section id="contact" class="contact">
             <h2>सम्पर्क</h2>
             <form id="contactForm">
                 <input type="text" id="name" placeholder="नाम" required>
@@ -55,10 +73,11 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 नेपाल निर्वाचन आयोग</p>
+        <p>&copy; 2023 नेपाल निर्वाचन आयोग</p>
     </footer>
 
     <script src="js/main.js"></script>
     <script src="js/api.js"></script>
+    <script src="js/map.js"></script>
 </body>
 </html>
