--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>नेपाल निर्वाचन आयोग</title>
+    <title data-translate="ElectionNepal">नेपाल निर्वाचन आयोग</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Preeti&display=swap">
@@ -15,54 +15,59 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">गृहपृष्ठ</a></li>
-                <li><a href="#candidates">उम्मेदवार</a></li>
-                <li><a href="#voting">मतदान</a></li>
-                <li><a href="#results">नतिजा</a></li>
-                <li><a href="#news">समाचार</a></li>
-                <li><a href="#contact">सम्पर्क</a></li>
+                <li><a data-translate="home" href="#">गृहपृष्ठ</a></li>
+                <li><a data-translate="candidates" href="#candidates">उम्मेदवार</a></li>
+                <li><a data-translate="votingInfo" href="#voting">मतदान</a></li>
+                <li><a data-translate="results" href="#results">नतिजा</a></li>
+                <li><a data-translate="news" href="#news">समाचार</a></li>
+                <li><a data-translate="contact" href="#contact">सम्पर्क</a></li>
             </ul>
         </nav>
+        <!-- Language Switcher -->
+        <div class="language-switcher">
+            <button onclick="changeLanguage('np')">नेपाली</button>
+            <button onclick="changeLanguage('en')">English</button>
+        </div>
     </header>
 
     <main>
         <!-- Hero Section -->
         <section class="hero">
-            <h1>नेपाल निर्वाचन आयोग</h1>
-            <p>स्वतन्त्र, निष्पक्ष र पारदर्शी निर्वाचनको ग्यारेन्टी</p>
+            <h1 data-translate="ElectionNepal">नेपाल निर्वाचन आयोग</h1>
+            <p data-translate="ElectionBio">स्वतन्त्र, निष्पक्ष र पारदर्शी निर्वाचनको ग्यारेन्टी</p>
             <div class="cta-buttons">
-                <button onclick="location.href='#register'">मतदाता दर्ता</button>
-                <button onclick="location.href='#voting'">मतदान कसरी गर्ने?</button>
+                <button data-translate="register"> onclick="location.href='#register'">मतदाता दर्ता</button>
+                <button data-translate="HowToVote" onclick="location.href='#voting'">मतदान कसरी गर्ने?</button>
             </div>
         </section>
 
         <!-- Candidate Profiles -->
         <section id="candidates" class="candidates">
-            <h2>उम्मेदवारहरू</h2>
+            <h2 data-translate="candidates">उम्मेदवारहरू</h2>
             <div id="candidateData"></div>
         </section>
 
         <!-- Voting Information -->
         <section id="voting" class="voting-info">
-            <h2>मतदान जानकारी</h2>
+            <h2 data-translate="votingInfo">मतदान जानकारी</h2>
             <div id="votingData"></div>
         </section>
 
         <!-- Live Election Results -->
         <section id="results" class="results">
-            <h2>नतिजा</h2>
+            <h2 data-translate="results">नतिजा</h2>
             <div id="resultsData"></div>
         </section>
 
         <!-- News Section -->
         <section id="news" class="news">
-            <h2>ताजा समाचार</h2>
+            <h2 data-translate="news">समाचार</h2>
             <div id="newsData"></div>
         </section>
 
         <!-- Contact Section -->
         <section id="contact" class="contact">
-            <h2>सम्पर्क</h2>
+            <h2 data-translate="contact">सम्पर्क</h2>
             <form id="contactForm">
                 <input type="text" id="name" placeholder="नाम" required>
                 <input type="email" id="email" placeholder="इमेल" required>
@@ -73,7 +78,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 नेपाल निर्वाचन आयोग</p>
+        <p>&copy; 2025 नेपाल निर्वाचन आयोग</p>
     </footer>
 
     <script src="js/main.js"></script>
