--- a/public/resetPassword.html
+++ b/public/resetPassword.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-translate="register">मतदाता दर्ता</title>
+    <title data-translate="resetPassword">पासवर्ड रिसेट</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Preeti&display=swap">
@@ -27,16 +27,14 @@
     </header>
 
     <main>
-        <!-- Voter Registration Form -->
-        <section class="voter-registration">
-            <h2 data-translate="register">मतदाता दर्ता</h2>
-            <form id="voterRegistrationForm">
-                <input type="text" id="fullName" placeholder="पुरा नाम" required>
-                <input type="text" id="address" placeholder="ठेगाना" required>
-                <input type="date" id="dob" placeholder="जन्म मिति" required>
+        <!-- Reset Password Form -->
+        <section class="reset-password">
+            <h2 data-translate="resetPassword">पासवर्ड रिसेट</h2>
+            <form id="resetPasswordForm">
                 <input type="text" id="citizenshipNumber" placeholder="नागरिकता नम्बर" required>
-                <input type="password" id="password" placeholder="पासवर्ड" required>
-                <button type="submit" data-translate="register">दर्ता गर्नुहोस्</button>
+                <input type="date" id="dob" placeholder="जन्म मिति" required>
+                <input type="password" id="newPassword" placeholder="नयाँ पासवर्ड" required>
+                <button type="submit" data-translate="resetPassword">पासवर्ड रिसेट गर्नुहोस्</button>
             </form>
         </section>
     </main>
@@ -46,6 +44,6 @@
     </footer>
 
     <script src="js/main.js"></script>
-    <script src="js/register.js"></script>
+    <script src="js/resetPassword.js"></script>
 </body>
 </html>
