--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="np">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +8,6 @@
     <link rel="stylesheet" href="css/responsive.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Preeti&display=swap" />
 </head>
-
 <body>
     <header>
         <div class="logo">
@@ -18,9 +16,7 @@
         <nav>
             <ul>
                 <li><a data-translate="home" href="#">गृहपृष्ठ</a></li>
-                <li>
-                    <a data-translate="candidates" href="#candidates">उम्मेदवार</a>
-                </li>
+                <li><a data-translate="candidates" href="#candidates">उम्मेदवार</a></li>
                 <li><a data-translate="votingInfo" href="#voting">मतदान</a></li>
                 <li><a data-translate="results" href="#results">नतिजा</a></li>
                 <li><a data-translate="news" href="#news">समाचार</a></li>
@@ -38,40 +34,34 @@
         <!-- Hero Section -->
         <section class="hero">
             <h1 data-translate="ElectionNepal">नेपाल निर्वाचन आयोग</h1>
-            <p data-translate="ElectionBio">
-                स्वतन्त्र, निष्पक्ष र पारदर्शी निर्वाचनको ग्यारेन्टी
-            </p>
+            <p data-translate="ElectionBio">स्वतन्त्र, निष्पक्ष र पारदर्शी निर्वाचनको ग्यारेन्टी</p>
             <div class="cta-buttons">
-                <button data-translate="register" onclick="location.href='register.html'">
-                    मतदाता दर्ता
-                </button>
-                <button data-translate="HowToVote" onclick="location.href='howToVote.html'">
-                    मतदान कसरी गर्ने?
-                </button>
+                <button data-translate="register" onclick="location.href='register.html'">मतदाता दर्ता</button>
+                <button data-translate="HowToVote" onclick="location.href='howToVote.html'">मतदान कसरी गर्ने?</button>
             </div>
         </section>
 
         <!-- Candidate Profiles -->
         <section id="candidates" class="candidates">
-            <h2 ç>उम्मेदवारहरू</h2>
+            <h2 data-translate="candidatesHeading">उम्मेदवारहरू</h2>
             <div id="candidateData"></div>
         </section>
 
         <!-- Voting Information -->
         <section id="voting" class="voting-info">
-            <h2 data-translate="votingInfo">मतदान जानकारी</h2>
+            <h2 data-translate="votingInfoHeading">मतदान जानकारी</h2>
             <div id="votingData"></div>
         </section>
 
         <!-- Live Election Results -->
         <section id="results" class="results">
-            <h2 data-translate="results">नतिजा</h2>
+            <h2 data-translate="resultsHeading">नतिजा</h2>
             <div id="resultsData"></div>
         </section>
 
         <!-- News Section -->
         <section id="news" class="news">
-            <h2 data-translate="news">समाचार</h2>
+            <h2 data-translate="newsHeading">समाचार</h2>
             <div id="newsData">
                 <p>Loading news...</p>
             </div>
@@ -79,7 +69,7 @@
 
         <!-- Contact Section -->
         <section id="contact" class="contact">
-            <h2 data-translate="contact">सम्पर्क</h2>
+            <h2 data-translate="contactHeading">सम्पर्क</h2>
             <form id="contactForm">
                 <input type="text" id="name" placeholder="नाम" required />
                 <input type="email" id="email" placeholder="इमेल" required />
@@ -90,11 +80,10 @@
     </main>
 
     <footer>
-        <p data-translate="Copyright">&copy; 2025 नेपाल निर्वाचन आयोग</p>
+        <p data-translate="Copyright">&copy; २०२५ नेपाल निर्वाचन आयोग</p>
     </footer>
 
     <script src="js/main.js"></script>
     <script src="js/map.js"></script>
 </body>
-
 </html>
