News Section Added

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
                 <li><a data-translate="candidates" href="#candidates">उम्मेदवार</a></li>
                 <li><a data-translate="votingInfo" href="#voting">मतदान</a></li>
                 <li><a data-translate="results" href="#results">नतिजा</a></li>
+                <li><a data-translate="pollingCenters" href="#polling">मतदान केन्द्रहरू</a></li>
                 <li><a data-translate="news" href="#news">समाचार</a></li>
                 <li><a data-translate="contact" href="#contact">सम्पर्क</a></li>
             </ul>
@@ -59,6 +60,14 @@
             <div id="resultsData"></div>
         </section>
 
+        <!-- Polling Centers -->
+        <section id="polling" class="polling-centers">
+            <h2 data-translate="pollingCenters">मतदान केन्द्रहरू</h2>
+            <div id="pollingData">
+                <p>Loading polling centers...</p>
+            </div>
+        </section>
+        
         <!-- News Section -->
         <section id="news" class="news">
             <h2 data-translate="newsHeading">समाचार</h2>
