Reset Password and Retrieve VoterId Added

--- a/public/resetPassword.html
+++ b/public/resetPassword.html
@@ -19,7 +19,6 @@
                 <li><a data-translate="login" href="login.html">लगइन</a></li>
             </ul>
         </nav>
-        <!-- Language Switcher -->
         <div class="language-switcher">
             <button onclick="changeLanguage('np')">नेपाली</button>
             <button onclick="changeLanguage('en')">English</button>
@@ -27,14 +26,26 @@
     </header>
 
     <main>
-        <!-- Reset Password Form -->
         <section class="reset-password">
             <h2 data-translate="resetPassword">पासवर्ड रिसेट</h2>
-            <form id="resetPasswordForm">
-                <input type="text" id="citizenshipNumber" placeholder="नागरिकता नम्बर" required>
+            <div class="form-tabs">
+                <button class="tab-button active" onclick="showForm('resetPassword')" data-translate="resetPassword">पासवर्ड रिसेट</button>
+                <button class="tab-button" onclick="showForm('retrieveVoterId')" data-translate="retrieveVoterId">मतदाता परिचयपत्र खोज्नुहोस्</button>
+            </div>
+
+            <!-- Reset Password Form -->
+            <form id="resetPasswordForm" class="form-section">
+                <input type="text" id="identifier" placeholder="नागरिकता नम्बर वा मतदाता परिचयपत्र नम्बर" required>
                 <input type="date" id="dob" placeholder="जन्म मिति" required>
                 <input type="password" id="newPassword" placeholder="नयाँ पासवर्ड" required>
                 <button type="submit" data-translate="resetPassword">पासवर्ड रिसेट गर्नुहोस्</button>
+            </form>
+
+            <!-- Retrieve Voter ID Form -->
+            <form id="retrieveVoterIdForm" class="form-section" style="display: none;">
+                <input type="text" id="citizenshipNumber" placeholder="नागरिकता नम्बर" required>
+                <input type="date" id="voterIdDob" placeholder="जन्म मिति" required>
+                <button type="submit" data-translate="retrieveVoterId">मतदाता परिचयपत्र खोज्नुहोस्</button>
             </form>
         </section>
     </main>
