Displayed Voted and Disabled Vote option for voted candidates and users

--- a/public/index.html
+++ b/public/index.html
@@ -63,28 +63,32 @@
         <!-- Candidate Profiles -->
         <section id="candidates" class="candidates">
             <h2 data-translate="candidatesHeading">उम्मेदवारहरू</h2>
-            <div id="candidateData"></div>
+            <div id="candidateData">
+                <p>Loading Candidates...</p>
+            </div>
         </section>
 
         <!-- Polling Centers -->
         <section id="polling" class="polling-centers">
             <h2 data-translate="pollingCenters">मतदान केन्द्रहरू</h2>
             <div id="pollingData">
-                <p>Loading polling centers...</p>
+                <p>Loading Polling Centers...</p>
             </div>
         </section>
         
         <!-- Live Election Results -->
         <section id="results" class="results">
             <h2 data-translate="resultsHeading">नतिजा</h2>
-            <div id="resultsData"></div>
+            <div id="resultsData">
+                <p>Loading Results...</p>
+            </div>
         </section>
 
         <!-- Upcoming Elections Section -->
         <section id="upcomingElections" class="upcoming-elections">
             <h2 data-translate="upcomingElections">आगामी निर्वाचनहरू</h2>
             <div id="upcomingElectionsData">
-                <p>Loading upcoming elections...</p>
+                <p>Loading Upcoming Elections...</p>
             </div>
         </section>
 
@@ -93,7 +97,7 @@
         <section id="news" class="news">
             <h2 data-translate="newsHeading">समाचार</h2>
             <div id="newsData">
-                <p>Loading news...</p>
+                <p>Loading News...</p>
             </div>
         </section>
 
